--- a/GMIS-Survey/index.html
+++ b/GMIS-Survey/index.html
@@ -6,7 +6,7 @@
     <title>GMIS-Survey: AAMIA Softwares</title>
     <link rel="stylesheet" href="style.css">
 
-    <script src="./sql.js-gh.pages/dist/sql-wasm.js"></script>
+    <script src="./sql.js-gh-pages/dist/sql-wasm.js"></script>
 </head>
 <body>
     <h1>Data from SQLite Database</h1>
