--- a/GMIS-Survey/index.html
+++ b/GMIS-Survey/index.html
@@ -14,7 +14,7 @@
     <p id=">Here some nice text</p>
   
     <p id="results">Click button here to let studff happen.</div>
-    <button id="loadAndQueryButton">Click here</button>button>
+    <button id="loadAndQueryButton">Click here</button>
     <script>
       let db = null; // Variable to hold the database object
 
