--- a/GMIS-Survey/index.html
+++ b/GMIS-Survey/index.html
@@ -13,7 +13,8 @@
     <h1>Generalist Models in Medical Image Segmentation: A Survey and Performance Comparison with Task-Specific Approaches</h1>
     <p id=">Here some nice text</p>
   
-    <p id="results">Click button here to let studff happen.</div>
+    <p id="results">Click button here to let studff happen.</p>
+    
     <button id="loadAndQueryButton">Click here</button>
     <script>
       let db = null; // Variable to hold the database object
