--- a/GMIS-Survey/index.html
+++ b/GMIS-Survey/index.html
@@ -9,9 +9,9 @@
     <script src="./sql.js-gh-pages/dist/sql-wasm.js"></script>
 </head>
 <body>
-    <h1>Data from SQLite Database</h1>
     <h1>Generalist Models in Medical Image Segmentation: A Survey and Performance Comparison with Task-Specific Approaches</h1>
-    <p id=">Here some nice text</p>
+    
+    <p>The website now is ugly, once the backend works, we'll make it pretty.</p>
   
     <p id="results">Click button here to let studff happen.</p>
     
