--- a/GMIS-Survey/index.html
+++ b/GMIS-Survey/index.html
@@ -17,8 +17,7 @@
     
     <button id="loadAndQueryButton">Click here</button>
 
-    <script src="./js/dbManager.js"></script>
-    <script src="./js/app.js"></script>    
+    <script type="module" src="./js/app.js"></script> 
     
 </body>
 </html>
