--- a/GMIS-Survey/index.html
+++ b/GMIS-Survey/index.html
@@ -12,6 +12,8 @@
     <h1>Generalist Models in Medical Image Segmentation: A Survey and Performance Comparison with Task-Specific Approaches</h1>
     
     <p>The website now is ugly, once the backend works, we'll make it pretty.</p>
+
+    <a href="https://arxiv.org/abs/2506.10825">Check out the preprint here!</a>
   
     <p id="results">Click button here to let studff happen.</p>
     
